--- a/app/views/symptoms/search.html.erb
+++ b/app/views/symptoms/search.html.erb
@@ -1,6 +1,6 @@
 <div class="log-form">
+  <%= render partial: '/partials/flash' %>
   <h4>Select the correct symptom and when you experienced it</h4><br>
-
   <div class="form">
     <%= form_tag logs_path, method: :post do %>
     <div class="form-row">
