--- a/app/assets/stylesheets/dashboard/index.scss
+++ b/app/assets/stylesheets/dashboard/index.scss
@@ -1,3 +1,11 @@
+.root-header {
+  margin: 50px 0px 0px 0px;
+}
+
+.subheader a {
+  margin-top: 20px;
+}
+
 .page-header {
   margin: 10px 0 30px 0px;
   // background-color: green;
