--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -34,7 +34,7 @@
                <li><%= medication.brand_name %></li>
              <% end %>
            </ul>
-           <%= link_to "Edit Medication List", "/medications/edit", method: :get %>
+           <%= link_to "Edit Medication List", "/medications/edit", method: :get %><br>
            <a href="/medications/new" class="btn btn-primary">Add New Medication</a>
         <% end %>
       </div>
@@ -72,10 +72,8 @@
       <h4>Recent Symptom Logs</h4>
       <div class="log-list">
         <%= render partial: '/partials/logs_list', locals: {logs: current_user.most_recent_logs} %>
-        <div class="row">
-          <a href="/logs" class="btn btn-primary">See All Logs</a>
-        </div>
       </div>
+      <a href="/logs" class="btn btn-primary">See All Logs</a>
     </div>
   </div>
 </div>
