Add test to delete medication from show page

--- a/app/views/medications/show.html.erb
+++ b/app/views/medications/show.html.erb
@@ -1,4 +1,5 @@
 <h3>Medication information</h3>
+<%= button_to 'Delete Medication from my List', '/medications/delete', params: {id: @medication.id, brand_name: @medication.brand_name, product_ndc: @medication.product_ndc}, method: :delete %>
 <p>Brand Name: <%= @medication.brand_name %></p>
 <p>Product NDC: <%= @medication.product_ndc %></p>
 <% if @medication.symptoms.empty? == false %>
