--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
       <%= yield %>
     </div>
     <footer class="footer">
-      <%= image_tag 'open_fda_logo', alt: 'openFDA Logo', width: "150px" %>
+      <%= image_tag 'https://open.fda.gov/img/l_openFDA.png', alt: 'openFDA Logo', width: '150', height: '30' %>
       <p>
         Thanks and credit for the drug information present in this application belong to <a href="https://open.fda.gov/">openFDA</a>.<br>
         See <a href="https://open.fda.gov/apis/">API documentation</a> for more details.
